Add config to select purposes to show at login